[fix] Vertical alignment for apps in panel.

--- a/portal/assets/css/ynhpanel.css
+++ b/portal/assets/css/ynhpanel.css
@@ -125,6 +125,7 @@ body {/*overflow-y: scroll;*/}
 #ynhoverlay .col > * {
   display: inline-block;
   letter-spacing: normal;
+  vertical-align: top;
 } 
 
 #ynhoverlay img {
